--- a/Part2/index.html
+++ b/Part2/index.html
@@ -9,10 +9,17 @@
 <body>
   <header><h1>Poker Cards</h1></header>
     <main>
-        <section><span>A</span><span>♦</span><span>A</span></section>
-        <section><span>A</span><span>♣</span><span>A</span></section>
-        <section><span>A</span><span>♥</span><span>A</span></section>
-        <section><span>A</span><span>♠</span><span>A</span></section>
+
+        <section id = "diamonds"><span>A</span><span>♦</span><span>A</span></section>
+        <section id = "clubs"><span>A</span><span>♣</span><span>A</span></section>
+        <section id = "hearts"><span>A</span><span>♥</span><span>A</span></section>
+        <section id = "spades"><span>A</span><span>♠</span><span>A</span></section>
     </main>
+
+<input type = "text" id="cardID" placeholder="Suit">
+<input type = "text" id="cardColor" placeholder="Color">
+<button id="myButton" onclick="setCard()">Submit</button>
+
+    <script src="./index.js"></script>
 </body>
 </html>
