--- a/Part2/index.html
+++ b/Part2/index.html
@@ -16,8 +16,8 @@
         <section id = "spades"><span>A</span><span>♠</span><span>A</span></section>
     </main>
 
-<input type = "text" id="cardID" placeholder="Suit">
-<input type = "text" id="cardColor" placeholder="Color">
+<input type = "text" id="idInput" placeholder="Suit">
+<input type = "text" id="colorInput" placeholder="Color"><br>
 <button id="myButton" onclick="setCard()">Submit</button>
 
     <script src="./index.js"></script>
